Add email and linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ about-author: I am researcher in circular economy in construction. # add descrip
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: shivabolboli # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-linkedin: shivabolboli
+social-email: shiva.bolboli@aalto.fi
 
 # Disqus
 discus-identifier:  # add your discus identifier
