--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: > # this means to ignore newlines until "baseurl:"
    viewing the building not the Earth as a valuable
    resource for construction.
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://tectonic-rebuild.github.io/blog/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
